--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "type": "commonjs",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "watch": "node --watch app.js",
+    "start": "node --env-file=.env app.js",
+    "watch": "node --watch --env-file=.env app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
